--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+
     <title>HOME</title>
 </head>
 <body>
@@ -28,7 +30,7 @@
             </div>
 
             <div class="subtitle">
-                <h2>Découvrez nos services et enregistrez-vous dès maintenant</h2>
+                <h2>14 rue Palais Grillet, 62009 LYON</h2>
             </div>
 
             <div class="button">
