[REF] Refresh de l'intro
To ADD :
-> Des textes
-> Une vraie image
-> Responsive

--- a/index.html
+++ b/index.html
@@ -1,49 +1,45 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>RCN Studio</title>
 
-    <title>HOME</title>
+    <link rel="stylesheet" href="src/styles.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Manrope:wght@400;500&display=swap" rel="stylesheet" />
 </head>
 <body>
-    <header>
-        <div class="header">            
-            <img src="res/icon.png" alt="Logo du site">
-            <div>
-                <ul>
-                    <li><a href="#home">HOME</a></li>
-                    <li><a href="#services">NOS SERVICES</a></li>
-                    <li><a href="#enregistrement">ENREGISTREMENT</a></li>
-                    <li><a href="#contact">CONTACT</a></li>
-                </ul>  
-            </div>
-        </div>        
+    <header class="header">
+        <img src="res/icon.png" alt="Logo du site" />
+        <nav>
+            <ul>
+                <li><a href="#home">HOME</a></li>
+                <li><a href="#services">NOS SERVICES</a></li>
+                <li><a href="#enregistrement">ENREGISTREMENT</a></li>
+                <li><a href="#contact">CONTACT</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <section>
-        <div class="intro">
-            <div class="title-a">
-                <h1>RCN STUDIO</h1>
-            </div>
+    <section class="intro" id="home">
+        <div class="title-a">
+            <h1>RCN STUDIO</h1>
+        </div>
 
-            <div class="subtitle">
-                <h2>14 rue Palais Grillet, 62009 LYON</h2>
-            </div>
+        <div class="subtitle">
+            <a href="https://maps.app.goo.gl/KwuyM3ZHbqnwdToZ8" target="_blank">
+                14 rue Palais Grillet, 62009 LYON
+            </a>
+        </div>
 
-            <div class="button">
-                <p>Le studio</p>
-            </div>
+        <a href="#studio" class="studio-button">Le Studio</a>
 
-            <div class="title-b">
-                <h3>BLA BLA</h3>
-            </div>
-            <div class="description">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, eius. Porro ducimus consectetur explicabo cum placeat ex quae enim odit harum! Reiciendis quos voluptas similique enim, iste, omnis laborum aspernatur excepturi perferendis eius soluta aliquid? Dolores est, id facere odit consequatur mollitia? Illum earum laborum odit hic expedita sequi quaerat.</p>
-            </div>
-            <div class="filtre"></div>
+        <div class="title-b">
+            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores sed numquam, accusamus aut soluta vero excepturi nesciunt?</h3>
+        </div>
+
+        <div class="description">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, eius. Porro ducimus explicabo cum placeat ex quae enim odit harum!</p>
         </div>
     </section>
 </body>
