--- a/index.html
+++ b/index.html
@@ -9,56 +9,79 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Manrope:wght@400;500&display=swap" rel="stylesheet" />
 </head>
 <body>
-    <header class="header">
-         <img src="res/icon.png" alt="Logo du site">
 
-        <button class="hamburger" id="hamburger" aria-label="Menu">
+    <header class="header">
+        <div class="logo">
+            <img src="res/icon.png" alt="Logo RCN Studio" />
+        </div>
+
+        <button class="hamburger" id="hamburger" aria-label="Ouvrir le menu">
             <span></span>
             <span></span>
             <span></span>
         </button>
 
-
-        <nav id="nav-menu" class="nav-menu">
+        <nav id="nav-menu" class="nav-menu" role="navigation" aria-label="Menu principal">
             <ul>
-                <li><a href="#home">HOME</a></li>
-                <li><a href="#services">NOS SERVICES</a></li>
-                <li><a href="#enregistrement">ENREGISTREMENT</a></li>
-                <li><a href="#contact">CONTACT</a></li>
+                <li><a href="#home">Accueil</a></li>
+                <li><a href="#studio">Le Studio</a></li>
+                <li><a href="#services">Nos Services</a></li>
+                <li><a href="#enregistrement">Enregistrement</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <section class="intro" id="home">
-        <div class="title-a">
-            <h1>RCN STUDIO</h1>
-        </div>
+    <main>
+        <section class="intro" id="home" aria-labelledby="title-rcn">
+            <div class="title-a">
+                <h1 id="title-rcn">RCN STUDIO</h1>
+            </div>
 
-        <div class="subtitle">
-            <a href="https://maps.app.goo.gl/KwuyM3ZHbqnwdToZ8" target="_blank">
-                14 rue Palais Grillet, 62009 LYON
-            </a>
-        </div>
+            <address class="subtitle">
+                <a href="https://maps.app.goo.gl/KwuyM3ZHbqnwdToZ8" target="_blank" rel="noopener noreferrer">
+                    14 rue Palais Grillet, 62009 LYON
+                </a>
+            </address>
 
-        <a href="#studio" class="studio-button">Le Studio</a>
+            <p><a href="#studio" class="studio-button">Découvrir le studio</a></p>
 
-        <div class="title-b">
-            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores sed numquam, accusamus aut soluta vero excepturi nesciunt?</h3>
-        </div>
+            <div class="title-b">
+                <h2>Un espace professionnel pour vos projets sonores</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores sed numquam, accusamus aut soluta vero excepturi nesciunt?</p>
+            </div>
 
-        <div class="description">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, eius. Porro ducimus explicabo cum placeat ex quae enim odit harum!</p>
-        </div>
-    </section>
+            <div class="description">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, eius. Porro ducimus explicabo cum placeat ex quae enim odit harum !</p>
+            </div>
+        </section>
+
+        <section class="studio" id="studio" aria-labelledby="studio-title">
+            <h2 id="studio-title">Le Studio</h2>
+
+            <div class="studio-description">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, voluptatum. Quisquam, cumque. Doloremque, asperiores. Quasi, cumque !</p>
+            </div>
+
+            <figure class="studio-image">
+                <img src="res/studio.jpg" alt="Vue intérieure du studio d'enregistrement RCN" />
+                <figcaption>Notre studio professionnel tout équipé</figcaption>
+            </figure>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 RCN Studio - Tous droits réservés</p>
+    </footer>
 
     <script>
-    const hamburger = document.getElementById('hamburger');
-    const navMenu = document.getElementById('nav-menu');
+        const hamburger = document.getElementById('hamburger');
+        const navMenu = document.getElementById('nav-menu');
 
-    hamburger.addEventListener('click', () => {
-        navMenu.classList.toggle('active');
-    });
-</script>
-
+        hamburger.addEventListener('click', () => {
+            hamburger.classList.toggle('active');
+            navMenu.classList.toggle('active');
+        });
+    </script>
 </body>
 </html>
