--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <nav id="nav-menu" class="nav-menu" role="navigation" aria-label="Menu principal">
             <ul>
                 <li><a href="#home">Accueil</a></li>
-                <li><a href="#studio">Le Studio</a></li>
-                <li><a href="#services">Nos Services</a></li>
+                <li><a href="src/studio.html">Le Studio</a></li>
+                <li><a href="src/services.html">Nos Services</a></li>
                 <li><a href="#enregistrement">Enregistrement</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
