--- a/src/studio.html
+++ b/src/studio.html
@@ -52,38 +52,38 @@
             </div>
         </section>
 
-        <section>
+       <section>
             <div class="studio-container">
                 <div class="studio-text">
                     <h2>La cabine</h2>
-                    <p>Notre cabine d'enregistrement, spacieuse et entièrement traitée acoustiquement avec des panneaux Vicoustic et des bass traps GIK Acoustics, garantit une neutralité sonore optimale. Elle est équipée de micros de référence tels que le Neumann U87 et le Shure SM7B, offrant une restitution fidèle et chaleureuse des voix comme des instruments. L'éclairage réglable et la ventilation silencieuse assurent un confort maximal lors de longues sessions.</p>
+                    <p>Notre cabine d'enregistrement, spacieuse et entièrement traitée acoustiquement avec des panneaux Vicoustic et des bass traps GIK Acoustics...</p>
                 </div>
                 <div class="studio-img">
-                    <img src="../res/studio-cabine.jpg" alt="">
+                    <img src="../res/studio-cabine.jpg" alt="Photo de la cabine">
                 </div>
             </div>
 
             <div class="studio-container">
-                 <div class="studio-img">
-                    <img src="../res/studio-salon.jpg" alt="">
+                <div class="studio-img">
+                    <img src="../res/studio-salon.jpg" alt="Photo du salon">
                 </div>
                 <div class="studio-text">
                     <h2>L'espace salon</h2>
-                    <p>Notre cabine d'enregistrement, spacieuse et entièrement traitée acoustiquement avec des panneaux Vicoustic et des bass traps GIK Acoustics, garantit une neutralité sonore optimale. Elle est équipée de micros de référence tels que le Neumann U87 et le Shure SM7B, offrant une restitution fidèle et chaleureuse des voix comme des instruments. L'éclairage réglable et la ventilation silencieuse assurent un confort maximal lors de longues sessions.</p>
+                    <p>Notre cabine d'enregistrement, spacieuse et entièrement traitée acoustiquement avec des panneaux Vicoustic et des bass traps GIK Acoustics...</p>
                 </div>
-               
             </div>
 
             <div class="studio-container">
                 <div class="studio-text">
-                    <h2>La régis</h2>
-                    <p>Notre cabine d'enregistrement, spacieuse et entièrement traitée acoustiquement avec des panneaux Vicoustic et des bass traps GIK Acoustics, garantit une neutralité sonore optimale. Elle est équipée de micros de référence tels que le Neumann U87 et le Shure SM7B, offrant une restitution fidèle et chaleureuse des voix comme des instruments. L'éclairage réglable et la ventilation silencieuse assurent un confort maximal lors de longues sessions.</p>
+                    <h2>La régie</h2>
+                    <p>Notre cabine d'enregistrement, spacieuse et entièrement traitée acoustiquement avec des panneaux Vicoustic et des bass traps GIK Acoustics...</p>
                 </div>
                 <div class="studio-img">
-                    <img src="../res/studio-regis.jpg" alt="">
+                    <img src="../res/studio-regis.jpg" alt="Photo de la régie">
                 </div>
             </div>
-        </section>
+     </section>
+
        
     </main>
 
