[REF] Correction de bugs / Ajout d'élément
-> Responsive de la page Studio
-> Responsive de la page Index
-> Responsive de la page Service
-> Correction des liens

-> Bug de intro encore présent, mauvais responsive + bande violet lié à la bg image et au bg color.

--- a/src/studio.html
+++ b/src/studio.html
@@ -24,8 +24,8 @@
         <nav id="nav-menu" class="nav-menu" role="navigation" aria-label="Menu principal">
             <ul>
                 <li><a href="../index.html">Accueil</a></li>
-                <li><a href="#studio">Le Studio</a></li>
-                <li><a href="#services">Nos Services</a></li>
+                <li><a href="studio.html">Le Studio</a></li>
+                <li><a href="services.html">Nos Services</a></li>
                 <li><a href="#enregistrement">Enregistrement</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -52,39 +52,91 @@
             </div>
         </section>
 
-       <section>
-            <div class="studio-container">
-                <div class="studio-text">
-                    <h2>La cabine</h2>
-                    <p>Notre cabine d'enregistrement, spacieuse et entièrement traitée acoustiquement avec des panneaux Vicoustic et des bass traps GIK Acoustics...</p>
+        <section>
+                <div class="studio-container">
+                    <div class="studio-text">
+                        <h2>La cabine</h2>
+                        <p>Notre cabine d'enregistrement, spacieuse et entièrement traitée acoustiquement avec des panneaux Vicoustic et des bass traps GIK Acoustics...</p>
+                    </div>
+                    <div class="studio-img">
+                        <img src="../res/studio-cabine.jpg" alt="Photo de la cabine">
+                    </div>
                 </div>
-                <div class="studio-img">
-                    <img src="../res/studio-cabine.jpg" alt="Photo de la cabine">
+
+                <div class="studio-container reverse">
+                    <div class="studio-img">
+                        <img src="../res/studio-salon.jpg" alt="Photo du salon">
+                    </div>
+                    <div class="studio-text">
+                        <h2>L'espace salon</h2>
+                        <p>Notre cabine d'enregistrement, spacieuse et entièrement traitée acoustiquement avec des panneaux Vicoustic et des bass traps GIK Acoustics...</p>
+                    </div>
+                </div>
+
+                <div class="studio-container">
+                    <div class="studio-text">
+                        <h2>La régie</h2>
+                        <p>Notre cabine d'enregistrement, spacieuse et entièrement traitée acoustiquement avec des panneaux Vicoustic et des bass traps GIK Acoustics...</p>
+                    </div>
+                    <div class="studio-img">
+                        <img src="../res/studio-regis.jpg" alt="Photo de la régie">
+                    </div>
+                </div>
+        </section>
+
+        <section>
+            <div class="studio-materiel">
+                <h2>LE MATÉRIEL</h2>
+                <div class="grid">
+                    <!-- Bloc 1 -->
+                    <div class="contents">
+                        <h3>Matériel de Prise de Son</h3>
+                        <ul>
+                        <li>Micro Neumann TLM49</li>
+                        <li>Casque Beyerdynamic DT770 Pro</li>
+                        <li>Guitare Fender Telecaster RW DSK + Ampli à lampes Fender Champion 600</li>
+                        </ul>
+                    </div>
+
+                    <!-- Bloc 2 -->
+                    <div class="contents">
+                        <h3>Station de Travail Audio Numérique (STAN)</h3>
+                        <ul>
+                        <li>Ordinateur iMac 2025 – 16 Go RAM</li>
+                        <li>Logiciel Logic Pro</li>
+                        <li>Carte son Apollo Twin</li>
+                        <li>Plug-ins : Universal Audio, Slate Digital, Soundtoys, Waves, FabFilter, etc.</li>
+                        </ul>
+                    </div>
+
+                    <!-- Bloc 3 -->
+                    <div class="contents">
+                        <h3>Écoute et Monitoring</h3>
+                        <ul>
+                        <li>Enceintes de monitoring FOCAL Shape 65 ou Yamaha HS5</li>
+                        </ul>
+                    </div>
+
+                    <!-- Bloc 4 -->
+                    <div class="contents">
+                        <h3>Instruments et Contrôleurs MIDI</h3>
+                        <ul>
+                        <li>Clavier maître Keystation 61 MK3</li>
+                        <li>Guitare Fender Telecaster RW DSK + Ampli Fender Champion 600</li>
+                        </ul>
+                    </div>
+
+                    <!-- Bloc 5 -->
+                    <div class="contents">
+                        <h3>Traitement Acoustique</h3>
+                        <ul>
+                        <li>EQ Acoustics Spectrum 2 L10 x1</li>
+                        <li>t.akustik Highline CBT1 x4</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-
-            <div class="studio-container">
-                <div class="studio-img">
-                    <img src="../res/studio-salon.jpg" alt="Photo du salon">
-                </div>
-                <div class="studio-text">
-                    <h2>L'espace salon</h2>
-                    <p>Notre cabine d'enregistrement, spacieuse et entièrement traitée acoustiquement avec des panneaux Vicoustic et des bass traps GIK Acoustics...</p>
-                </div>
-            </div>
-
-            <div class="studio-container">
-                <div class="studio-text">
-                    <h2>La régie</h2>
-                    <p>Notre cabine d'enregistrement, spacieuse et entièrement traitée acoustiquement avec des panneaux Vicoustic et des bass traps GIK Acoustics...</p>
-                </div>
-                <div class="studio-img">
-                    <img src="../res/studio-regis.jpg" alt="Photo de la régie">
-                </div>
-            </div>
-     </section>
-
-       
+        </section>       
     </main>
 
     <footer>
