--- a/index.html
+++ b/index.html
@@ -34,39 +34,24 @@
 
     <main>
         <section class="intro" id="home" aria-labelledby="title-rcn">
-            <div class="title-a">
+            <header>
                 <h1 id="title-rcn">RCN STUDIO</h1>
-            </div>
+                <address class="subtitle">
+                    <a href="https://maps.app.goo.gl/KwuyM3ZHbqnwdToZ8" target="_blank" rel="noopener noreferrer">
+                        14 rue Palais Grillet, 62009 LYON
+                    </a>
+                </address>
+                <a href="#studio" class="studio-button">Découvrir le studio</a>
+            </header>
 
-            <address class="subtitle">
-                <a href="https://maps.app.goo.gl/KwuyM3ZHbqnwdToZ8" target="_blank" rel="noopener noreferrer">
-                    14 rue Palais Grillet, 62009 LYON
-                </a>
-            </address>
-
-            <p><a href="#studio" class="studio-button">Découvrir le studio</a></p>
-
-            <div class="title-b">
+            <article class="title-b">
                 <h2>Un espace professionnel pour vos projets sonores</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores sed numquam, accusamus aut soluta vero excepturi nesciunt?</p>
-            </div>
+            </article>
 
-            <div class="description">
+            <article class="description">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, eius. Porro ducimus explicabo cum placeat ex quae enim odit harum !</p>
-            </div>
-        </section>
-
-        <section class="studio" id="studio" aria-labelledby="studio-title">
-            <h2 id="studio-title">Le Studio</h2>
-
-            <div class="studio-description">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, voluptatum. Quisquam, cumque. Doloremque, asperiores. Quasi, cumque !</p>
-            </div>
-
-            <figure class="studio-image">
-                <img src="res/studio.jpg" alt="Vue intérieure du studio d'enregistrement RCN" />
-                <figcaption>Notre studio professionnel tout équipé</figcaption>
-            </figure>
+            </article>
         </section>
     </main>
 
