--- a/index.html
+++ b/index.html
@@ -55,9 +55,42 @@
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2025 RCN Studio - Tous droits réservés</p>
+    <footer class="footer">
+    <div class="footer-container">
+        <div class="footer-logo-section">
+        <img src="./res/icon.png" alt="Logo RCN Studio" class="footer-logo" />
+        <div>
+            <h2>RCN Studio</h2>
+            <p>Studio d'enregistrement | Mixage | Mastering</p>
+        </div>
+        </div>
+
+        <div class="footer-contact">
+        <h3>Contact</h3>
+        <ul>
+            <li><span>📍</span> 14 rue Palais Grillet, 69002 Lyon</li>
+            <li><span>📞</span> 07 56 96 78 24</li>
+            <li><span>✉️</span> racinenterprise@gmail.com</li>
+        </ul>
+        </div>
+
+        <div class="footer-links">
+        <h3>Liens utiles</h3>
+        <ul>
+            <li><a href="#home">Accueil</a></li>
+            <li><a href="./src/services.html#home">Nos services</a></li>
+            <li><a href="#">Enregistrement</a></li>
+            <li><a href="#">Tarifs</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Mentions légales</a></li>
+        </ul>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        © 2025 RCN Studio — Tous droits réservés.
+    </div>
     </footer>
+
 
     <script>
         const hamburger = document.getElementById('hamburger');
