--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         14 rue Palais Grillet, 62009 LYON
                     </a>
                 </address>
-                <a href="#studio" class="studio-button">Découvrir le studio</a>
+                <a href="./src/studio.html#home" class="studio-button">Découvrir le studio</a>
             </header>
 
             <article class="title-b">
