--- a/src/studio.html
+++ b/src/studio.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="RCN Studio - Votre espace professionnel pour l'enregistrement, le mixage et le mastering à Lyon. Découvrez nos services de qualité supérieure." />
     <title>LE STUDIO</title>
 
     <link rel="stylesheet" href="styles.css" />
