[REF] paragraphe Nos Services

--- a/src/services.html
+++ b/src/services.html
@@ -37,6 +37,7 @@
         <section class="intro" id="home" aria-labelledby="title-rcn">
             <div class="title-a">
                 <h1 id="title-rcn">NOS SERVICES</h1>
+                <p class="description">Enregistrement, mixage, mastering : nous vous accompagnons à chaque étape de votre projet avec des services pro, adaptés à vos besoins. Qualité studio, tarifs clairs, rendu optimal.</p>
             </div>
         </section>
 
