[REF] Code review, adaptation figma, code plus propre mais à revoir

--- a/index.html
+++ b/index.html
@@ -46,12 +46,16 @@
             </header>
 
             <article class="title-b">
-                <h2>Un espace professionnel pour vos projets sonores</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores sed numquam, accusamus aut soluta vero excepturi nesciunt?</p>
+                <h2>RCN STUDIO, votre studio au cœur de Lyon</h2>
+                <p>RCN Studio, situé au cœur de Lyon, est un lieu pensé pour les artistes et les musiciens en quête d'un son professionnel. Que vous soyez chanteur, rappeur, instrumentiste ou producteur, vous y trouverez un environnement propice à la création.</p>
             </article>
 
             <article class="description">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, eius. Porro ducimus explicabo cum placeat ex quae enim odit harum !</p>
+                <p>Enregistrement, mixage, mastering : chaque étape de votre projet est accompagnée par un ingénieur du son unique, passionné et à votre écoute, pour garantir une cohérence artistique et technique.</p>
+            </article>
+
+            <article class="description">
+                <p>Disponible 7j/7 sur réservation, RCN Studio vous offre un cadre chaleureux, un matériel de qualité et une approche humaine, centrée sur votre musique.</p>
             </article>
         </section>
     </main>
@@ -69,9 +73,9 @@
         <div class="footer-contact">
         <h3>Contact</h3>
         <ul>
-            <li><span>📍</span> 14 rue Palais Grillet, 69002 Lyon</li>
-            <li><span>📞</span> 07 56 96 78 24</li>
-            <li><span>✉️</span> racinenterprise@gmail.com</li>
+            <li><a href="https://maps.app.goo.gl/KwuyM3ZHbqnwdToZ8" target="_blank" rel="noopener noreferrer"><span>📍</span> 14 rue Palais Grillet, 69002 Lyon</a></li>
+            <li><a href="tel:07 56 96 78 24"><span>📞</span> 07 56 96 78 24</a></li>
+            <li><a href="mailto:racinenterprise@gmail.com"><span>✉️</span> racinenterprise@gmail.com</a></li>
         </ul>
         </div>
 
