--- a/src/services.html
+++ b/src/services.html
@@ -35,15 +35,20 @@
 
     <main>
         <section class="intro" id="home" aria-labelledby="title-rcn">
-            <div class="title-a">
+            <header>
                 <h1 id="title-rcn">NOS SERVICES</h1>
-                <p class="description">Enregistrement, mixage, mastering : nous vous accompagnons à chaque étape de votre projet avec des services pro, adaptés à vos besoins. Qualité studio, tarifs clairs, rendu optimal.</p>
-            </div>
+            </header>
+
+            <article class="description">
+                <p>Enregistrement, mixage, mastering : nous vous accompagnons à chaque étape de votre projet avec des services pro, adaptés à vos besoins. Qualité studio, tarifs clairs, rendu optimal.</p>
+            </article>
+
+            <a href="#" class="studio-button">Réserver</a>
         </section>
 
        
         <section>
-            <h2 style="text-align: center;">Notre savoir faire au service de votre exigence</h2>
+            <h2 class="services-title">Notre savoir faire au service de votre exigence</h2>
             <div class="container-services">
                 <div class="service">
                     <img src="../res/service-enregistrement.jpg" alt="">
@@ -80,9 +85,9 @@
             <div class="footer-contact">
             <h3>Contact</h3>
             <ul>
-                <li><span>📍</span> 14 rue Palais Grillet, 69002 Lyon</li>
-                <li><span>📞</span> 07 56 96 78 24</li>
-                <li><span>✉️</span> racinenterprise@gmail.com</li>
+                <li><a href="https://maps.app.goo.gl/KwuyM3ZHbqnwdToZ8" target="_blank" rel="noopener noreferrer"><span>📍</span> 14 rue Palais Grillet, 69002 Lyon</a></li>
+                <li><a href="tel:07 56 96 78 24"><span>📞</span> 07 56 96 78 24</a></li>
+                <li><a href="mailto:racinenterprise@gmail.com"><span>✉️</span> racinenterprise@gmail.com</a></li>
             </ul>
             </div>
 
