--- a/src/studio.html
+++ b/src/studio.html
@@ -35,29 +35,22 @@
 
     <main>
         <section class="intro" id="home" aria-labelledby="title-rcn">
-            <div class="title-a">
+            <header>
                 <h1 id="title-rcn">LE STUDIO</h1>
-            </div>
+            </header>
 
-            <div class="title-b">
-                <p>
-                    Plongez dans l'ambiance unique de notre studio, où chaque espace a été pensé pour la création : 
-                    une cabine d'enregistrement confortable et parfaitement insonorisée ainsi qu'un espace détente 
-                    convivial pour accueillir vos sessions dans les meilleures conditions. 
-                    Le tout est complété par un équipement audio haut de gamme, garantissant une 
-                    qualité sonore professionnelle à chaque étape de votre projet.
-                </p>
+            <article class="description">
+                <p>Plongez dans l'ambiance unique de notre studio, où chaque espace a été pensé pour la création : une cabine d'enregistrement confortable et parfaitement insonorisée ainsi qu'un espace détente convivial pour accueillir vos sessions dans les meilleures conditions. Le tout est complété par un équipement audio haut de gamme, garantissant une qualité sonore professionnelle à chaque étape de votre projet.</p>
+            </article>
 
-                <a class="studio-button" href="#">Réserver</a>
-
-            </div>
+            <a href="#" class="studio-button">Réserver</a>
         </section>
 
         <section>
                 <div class="studio-container">
                     <div class="studio-text">
                         <h2>La cabine</h2>
-                        <p>Notre cabine d'enregistrement, spacieuse et entièrement traitée acoustiquement avec des panneaux Vicoustic et des bass traps GIK Acoustics...</p>
+                        <p>Notre cabine d'enregistrement, spacieuse et entièrement traitée acoustiquement avec des panneaux Vicoustic, des bass traps GIK Acoustics, ainsi que des éléments EQ Acoustics Spectrum et t.akustik Highline, garantit une neutralité sonore optimale. Elle est équipée de matériel de référence, notamment le micro Neumann TLM49 et le casque Beyerdynamic DT770 Pro, offrant une restitution fidèle et chaleureuse des voix comme des instruments.</p>
                     </div>
                     <div class="studio-img">
                         <img src="../res/studio-cabine.jpg" alt="Photo de la cabine">
@@ -70,14 +63,14 @@
                     </div>
                     <div class="studio-text">
                         <h2>L'espace salon</h2>
-                        <p>Notre cabine d'enregistrement, spacieuse et entièrement traitée acoustiquement avec des panneaux Vicoustic et des bass traps GIK Acoustics...</p>
+                        <p>Le salon est un espace chaleureux avec deux canapés confortables et une table centrale, idéal pour se détendre ou discuter. La salle permet de fumer, mais il n'y a pas de connexion Wi-Fi disponible.</p>
                     </div>
                 </div>
 
                 <div class="studio-container">
                     <div class="studio-text">
                         <h2>La régie</h2>
-                        <p>Notre cabine d'enregistrement, spacieuse et entièrement traitée acoustiquement avec des panneaux Vicoustic et des bass traps GIK Acoustics...</p>
+                        <p>La régie est équipée d'un matériel professionnel de haute qualité : un iMac 2025 avec 16 Go de RAM, une carte son Apollo Twin, et le logiciel Logic Pro pour une production fluide. Pour le monitoring, vous disposez d'enceintes FOCAL Shape 65 ou Yamaha HS5, ainsi que d'un clavier maître Keystation 61 MK3. La régie intègre également une large gamme de plug-ins professionnels (Universal Audio, Slate Digital, Soundtoys, Waves, FabFilter) pour un mixage précis et créatif.</p>
                     </div>
                     <div class="studio-img">
                         <img src="../res/studio-regis.jpg" alt="Photo de la régie">
@@ -137,6 +130,11 @@
                     </div>
                 </div>
             </div>
+            
+            <div class="studio-button-bis">
+                <a href="#" class="studio-button">Réserver</a>
+            </div>
+            
         </section>       
     </main>
 
@@ -153,9 +151,9 @@
             <div class="footer-contact">
             <h3>Contact</h3>
             <ul>
-                <li><span>📍</span> 14 rue Palais Grillet, 69002 Lyon</li>
-                <li><span>📞</span> 07 56 96 78 24</li>
-                <li><span>✉️</span> racinenterprise@gmail.com</li>
+                <li><a href="https://maps.app.goo.gl/KwuyM3ZHbqnwdToZ8" target="_blank" rel="noopener noreferrer"><span>📍</span> 14 rue Palais Grillet, 69002 Lyon</a></li>
+                <li><a href="tel:07 56 96 78 24"><span>📞</span> 07 56 96 78 24</a></li>
+                <li><a href="mailto:racinenterprise@gmail.com"><span>✉️</span> racinenterprise@gmail.com</a></li>
             </ul>
             </div>
 
