[ADD] Home page : Nos Services
Pas encore responsive et pas encore de liens

--- a/index.html
+++ b/index.html
@@ -58,6 +58,64 @@
                 <p>Disponible 7j/7 sur réservation, RCN Studio vous offre un cadre chaleureux, un matériel de qualité et une approche humaine, centrée sur votre musique.</p>
             </article>
         </section>
+
+ 
+        <section class="main-container">
+            <div class="main-contain">
+                <header class="content-wrapper">
+                <div class="main-head">
+                    <img class="footer-logo" src="./res/icon.png" alt="Logo">
+                    <h2>NOS SERVICES</h2>
+                </div>
+                <p class="main-desc">
+                    Découvrez nos services sur mesure proposés par notre studio d'enregistrement :
+                    enregistrement, mixage et mastering. Faites passer votre musique au niveau supérieur avec
+                    notre expertise et notre équipement de qualité.
+                </p>
+                </header>
+
+                <article class="enregistrement-container">
+                    <figure>
+                        <img class="bg-circle" src="./res/icon-microphone.svg" alt="Icône d'enregistrement">
+                    </figure>
+                    <div class="text-container">
+                        <h3 class="text-container-title">Enregistrement</h3>
+                        <p>
+                        Capturez votre voix ou vos instruments avec une qualité professionnelle dans un environnement acoustique optimisé.
+                        </p>
+                        <a href="">En savoir plus</a>
+                    </div>
+                </article>
+
+                <section class="mixage-and-mastering-container">
+                    <article class="mixage-container">
+                        <figure>
+                            <img class="bg-circle" src="./res/icon-mixing-table.svg" alt="Icône de mixage">
+                        </figure>
+                        <div class="text-container">
+                            <h3 class="text-container-title">Mixage</h3>
+                            <p>
+                                Nous équilibrons, sculptons et harmonisons vos pistes pour donner à votre musique toute sa dimension.
+                            </p>
+                            <a href="#">En savoir plus</a>
+                        </div>
+                    </article>
+
+                    <article class="mixage-container">
+                        <figure>
+                            <img class="bg-circle" src="./res/icon-mixing-table.svg" alt="Icône de mastering">
+                        </figure>
+                        <div class="text-container">
+                            <h3 class="text-container-title">Mastering</h3>
+                            <p>
+                                Le mastering donne la touche finale : votre morceau gagne en puissance, clarté et cohérence, prêt pour toutes les plateformes.
+                            </p>
+                            <a href="#">En savoir plus</a>
+                        </div>
+                    </article>
+                </section>
+            </div>
+        </section>        
     </main>
 
     <footer class="footer">
