[ADD] Nos tarifs
C'est responsive !!

--- a/src/services.html
+++ b/src/services.html
@@ -69,6 +69,65 @@
                 </div>
             </div>
         </section>   
+
+
+        <section id="tarif" class="prix">
+            <div class="prix-head">
+                <img src="../res/icon-prix.svg" alt="">
+                <h2>Nos tarifs</h2>
+            </div>
+
+            <section class="prix-container">
+                <div class="prix-card">
+                    <div class="prix-card-head">
+                        <img src="../res/icon-microphone.svg" alt="">
+                        <h3>Enregistrement</h3>
+                    </div>
+                    <div class="prix-card-prix">
+                        <p><span>35€</span> /Par heure</p>
+                    </div>
+                    <div class="prix-card-detail">
+                        <p><span>110€</span> 1 heure + 1 mix</p>    
+                        <p><span>140€</span> 2 heure + 1 mix</p>
+                    </div>
+                    <a href="#">Réserver</a>
+                </div>
+
+                <div class="prix-card">
+                    <div class="prix-card-head">
+                        <img src="../res/icon-mixing-table.svg" alt="">
+                        <h3>Mixage*</h3>
+                    </div>
+                    <div class="prix-card-prix">
+                        <p><span>80€</span> /Par musique</p>
+                    </div>
+                    <div class="prix-card-description">
+                        <span></span>
+                        <p>Pour un projet entier, veuillez contacter le studio</p>
+                        <span></span>
+                    </div>
+                    <a href="#">Réserver</a>
+                </div>
+
+                <div class="prix-card">
+                    <div class="prix-card-head">
+                        <img src="../res/icon-mixing-table.svg" alt="">
+                        <h3>Mastering</h3>
+                    </div>
+                    <div class="prix-card-prix">
+                        <p><span>20€</span> /Par musique</p>
+                    </div>
+                    <div class="prix-card-description">
+                        <span></span>
+                        <p>Pour un projet entier, veuillez contacter le studio</p>
+                        <span></span>
+                    </div>
+                    <a href="#">Réserver</a>
+                </div>
+            </section>
+             
+        </section>
+
     </main>
 
     
