--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <p>
                         Capturez votre voix ou vos instruments avec une qualité professionnelle dans un environnement acoustique optimisé.
                         </p>
-                        <a href="">En savoir plus</a>
+                        <a href="./src/services.html#tarif" aria-label="Voir les tarifs">En savoir plus</a>
                     </div>
                 </article>
 
@@ -97,7 +97,7 @@
                             <p>
                                 Nous équilibrons, sculptons et harmonisons vos pistes pour donner à votre musique toute sa dimension.
                             </p>
-                            <a href="#">En savoir plus</a>
+                            <a href="./src/services.html#tarif" aria-label="Voir les tarifs">En savoir plus</a>
                         </div>
                     </article>
 
@@ -110,7 +110,7 @@
                             <p>
                                 Le mastering donne la touche finale : votre morceau gagne en puissance, clarté et cohérence, prêt pour toutes les plateformes.
                             </p>
-                            <a href="#">En savoir plus</a>
+                            <a href="./src/services.html#tarif" aria-label="Voir les tarifs">En savoir plus</a>
                         </div>
                     </article>
                 </section>
