--- a/src/services.html
+++ b/src/services.html
@@ -27,8 +27,8 @@
                 <li><a href="../index.html">Accueil</a></li>
                 <li><a href="studio.html">Le Studio</a></li>
                 <li><a href="services.html">Nos Services</a></li>
-                <li><a href="#enregistrement">Enregistrement</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="./about.html">À propos</a></li>
             </ul>
         </nav>
     </header>
@@ -51,19 +51,19 @@
             <h2 class="services-title">Notre savoir faire au service de votre exigence</h2>
             <div class="container-services">
                 <div class="service">
-                    <img src="../res/service-enregistrement.jpg" alt="">
+                    <img src="../res/service-enregistrement.jpg" alt="Image d'enregistrement">
                     <h3>Enregistrement studio</h3>
                     <p>Notre studio offre une acoustique parfaite et du matériel haut de gamme pour donner vie à votre musique. Enregistrez, créez, vibrez.</p>
                 </div>
 
                 <div class="service">
-                    <img src="../res/service-mixage.jpg" alt="">
+                    <img src="../res/service-mixage.jpg" alt="Image de mixage">
                     <h3>Mixage professionnel</h3>
                     <p>Sublimez votre musique. Grâce à un mixage précis et équilibré, nous révélons toute la richesse de vos enregistrements. Un rendu propre, puissant, prêt pour la scène ou le streaming.</p>
                 </div>
 
                 <div class="service">
-                    <img src="../res/service-mastering.jpg" alt="">
+                    <img src="../res/service-mastering.jpg" alt="Image de mastering">
                     <h3>Mastering</h3>
                     <p>La touche finale de votre projet. Nous optimisons la dynamique, l'équilibre tonal et le volume pour un son homogène, puissant et adapté à tous les supports. Un rendu pro, prêt à être diffusé partout.</p>
                 </div>
@@ -151,13 +151,12 @@
             </div>
 
             <div class="footer-links">
-            <h3>Liens utiles</h3>
+            <h3 id="contact">Liens utiles</h3>
             <ul>
-                <li><a href="../index.html#home">Accueil</a></li>
-                <li><a href="#home">Nos services</a></li>
-                <li><a href="#">Enregistrement</a></li>
-                <li><a href="#">Tarifs</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="../index.html#home" aria-label="Retour à l'accueil">Accueil</a></li>
+                <li><a href="#home" aria-label="Voir nos services">Nos services</a></li>
+                <li><a href="./services.html#tarif" aria-label="Voir les tarifs">Tarifs</a></li>
+                <li><a href="./about.html">À propos</a></li>
                 <li><a href="#">Mentions légales</a></li>
             </ul>
             </div>
