--- a/src/studio.html
+++ b/src/studio.html
@@ -27,8 +27,8 @@
                 <li><a href="../index.html">Accueil</a></li>
                 <li><a href="studio.html">Le Studio</a></li>
                 <li><a href="services.html">Nos Services</a></li>
-                <li><a href="#enregistrement">Enregistrement</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="./about.html">À propos</a></li>
             </ul>
         </nav>
     </header>
@@ -149,7 +149,7 @@
             </div>
 
             <div class="footer-contact">
-            <h3>Contact</h3>
+            <h3 id="contact">Contact</h3>
             <ul>
                 <li><a href="https://maps.app.goo.gl/KwuyM3ZHbqnwdToZ8" target="_blank" rel="noopener noreferrer"><span>📍</span> 14 rue Palais Grillet, 69002 Lyon</a></li>
                 <li><a href="tel:07 56 96 78 24"><span>📞</span> 07 56 96 78 24</a></li>
@@ -158,13 +158,12 @@
             </div>
 
             <div class="footer-links">
-            <h3>Liens utiles</h3>
+            <h3 id="contact">Liens utiles</h3>
             <ul>
-                <li><a href="../index.html#home">Accueil</a></li>
-                <li><a href="./services.html#home">Nos services</a></li>
-                <li><a href="#">Enregistrement</a></li>
-                <li><a href="#">Tarifs</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="../index.html#home" aria-label="Retour à l'accueil">Accueil</a></li>
+                <li><a href="./services.html#home" aria-label="Voir nos services">Nos services</a></li>
+                <li><a href="./services.html#tarif" aria-label="Voir les tarifs">Tarifs</a></li>
+                <li><a href="./about.html">À propos</a></li>
                 <li><a href="#">Mentions légales</a></li>
             </ul>
             </div>
