--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <li><a href="#home">Accueil</a></li>
                 <li><a href="src/studio.html">Le Studio</a></li>
                 <li><a href="src/services.html">Nos Services</a></li>
-                <li><a href="#enregistrement">Enregistrement</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="src/about.html">À propos</a></li>
             </ul>
         </nav>
     </header>
@@ -129,7 +129,7 @@
         </div>
 
         <div class="footer-contact">
-        <h3>Contact</h3>
+        <h3 id="contact">Contact</h3>
         <ul>
             <li><a href="https://maps.app.goo.gl/KwuyM3ZHbqnwdToZ8" target="_blank" rel="noopener noreferrer"><span>📍</span> 14 rue Palais Grillet, 69002 Lyon</a></li>
             <li><a href="tel:07 56 96 78 24"><span>📞</span> 07 56 96 78 24</a></li>
@@ -140,11 +140,10 @@
         <div class="footer-links">
         <h3>Liens utiles</h3>
         <ul>
-            <li><a href="#home">Accueil</a></li>
-            <li><a href="./src/services.html#home">Nos services</a></li>
-            <li><a href="#">Enregistrement</a></li>
-            <li><a href="#">Tarifs</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#home" aria-label="Retour à l'accueil">Accueil</a></li>
+            <li><a href="./src/services.html#home" aria-label="Voir nos services">Nos services</a></li>
+            <li><a href="./src/services.html#tarif" aria-label="Voir les tarifs">Tarifs</a></li>
+            <li><a href="./src/about.html">À propos</a></li>
             <li><a href="#">Mentions légales</a></li>
         </ul>
         </div>
